Bug 211810 - Raw import tool: black picture after import
Summary: Raw import tool: black picture after import
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-RawImport-Native (other bugs)
Version First Reported In: 1.0.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-25 18:36 UTC by Bartek Pietrasiak
Modified: 2022-01-26 04:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments
Excerpt from the RAW Import Settings section of digikamrc (3.30 KB, text/plain)
2009-11-07 15:37 UTC, Marcel Wiesweg
Details
Patch to fix initial bug... (1.98 KB, patch)
2009-11-08 21:01 UTC, caulier.gilles
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bartek Pietrasiak 2009-10-25 18:36:30 UTC
Version:           rev.: 1039758 (using KDE 4.3.2)
OS:                Linux
Installed from:    Fedora RPMs

Steps:
- F4 on raw
- select the 16 bit color checkbox
- don't click update but just import

If you click update before import the picture will be imported correctly.
Comment 1 caulier.gilles 2009-10-25 18:41:39 UTC
Not reproducible here. Which digiKam version you use ?

Gilles Caulier
Comment 2 Andi Clemens 2009-10-25 18:49:11 UTC
rev.: 1039758  :-)
Comment 3 Bartek Pietrasiak 2009-10-25 21:56:31 UTC
Still in rev.: 1040208.

If the checbox is selected when editor is shown, unselect it, click on update and select it and click Import.
Comment 4 Johannes Wienke 2009-10-25 22:07:25 UTC
I can confirm this.
Comment 5 Johannes Wienke 2009-10-25 23:52:00 UTC
Seems only to happen when switching from 8 to 16 bit.
Comment 6 Marcel Wiesweg 2009-11-07 15:35:15 UTC
Curves adjust is the problem here. When not setting the curveAdjust parameter of the RAWDecodingSettings (commenting out line 658 of rawsettingsbox.cpp) the problem is gone.
I suspect the curves box gives parameters for the [0,255] range when it should use the [0,65535] range.
Johannes, you have been working in this area recently iirc?
Comment 7 Marcel Wiesweg 2009-11-07 15:37:36 UTC
Created attachment 38156 [details]
Excerpt from the RAW Import Settings section of digikamrc

I am also seeing the ASCII art in the config file. Seems to be a bit of redundant information here ;-)
Don't know if this is related.
Comment 8 Johannes Wienke 2009-11-07 22:52:43 UTC
Lol that looks strange. I will have a look at this tomorrow.
Comment 9 Johannes Wienke 2009-11-08 15:19:40 UTC
SVN commit 1046364 by jwienke:

Fix "ASCII Art" saving of curves

CCBUG: 211810

 M  +15 -17    curveswidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1046364
Comment 10 caulier.gilles 2009-11-08 21:01:53 UTC
Created attachment 38192 [details]
Patch to fix initial bug...

To review...

Gilles Caulier
Comment 11 Johannes Wienke 2009-11-08 21:24:44 UTC
SVN commit 1046469 by jwienke:

Applies Gilles' patch to correctly convert curves to 16 bit if no preview was generated before.

BUG: 211810

 M  +5 -1      rawimport.cpp  
 M  +1 -1      rawsettingsbox.cpp  
 M  +2 -2      rawsettingsbox.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1046469