Applies Gilles' patch to correctly convert curves to 16 bit if no preview was generated before.

BUG: 211810

svn path=/trunk/extragear/graphics/digikam/; revision=1046469